<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clrBackBlue"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/relBTM"
        android:layout_alignParentBottom="true"
        ></RelativeLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
      >

        <RelativeLayout
        android:id="@+id/relHomeBtn"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/textboxseptr"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sHOME"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relProfileBtn"
            android:layout_width="match_parent"
            android:layout_height="56dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/textboxseptr"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sMYPROFILE"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relHistoryBtn"
            android:layout_width="match_parent"
            android:layout_height="56dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/textboxseptr"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sHISTORY"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relSettingsBtn"
            android:layout_width="match_parent"
            android:layout_height="56dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/textboxseptr"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sSETTINGS"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relChangePassBtn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:visibility="visible"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/textboxseptr"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sCHANGEPASSWORD"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:visibility="visible">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/textboxseptr"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />
    <TextView
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:text="@string/sLOGOUT"
        android:id="@+id/txtLogoutBtn"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:gravity="center"

        android:layout_margin="16dp"
        android:layout_centerHorizontal="true"

        />
</RelativeLayout>
    </LinearLayout>

</RelativeLayout>
