<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@color/clrBackBlue"
        android:scaleType="centerCrop"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAppBlue"
        android:id="@+id/relTop">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:id="@+id/imgHomeBtn"
            android:layout_centerVertical="true"
            android:src="@drawable/menuicon"
            android:padding="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imgHomeBtn"
            android:text="@string/sMYPROFILE"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            />

    </RelativeLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/relTop">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/edFullName"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp"
            android:hint="@string/sFullName"
            android:singleLine="true"
            android:maxLength="50"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="6dp"
            android:gravity="bottom"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/textboxseptr"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/edPhoneNum"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp"
            android:hint="@string/sPhoneNumber"
            android:singleLine="true"
            android:maxLength="20"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="6dp"
            android:gravity="bottom"
            android:inputType="phone"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/textboxseptr"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />

        <TextView
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:text="@string/sSave"
            android:id="@+id/txtSaveBtn"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:gravity="center"
            android:background="@drawable/savebtn"
            android:layout_marginTop="40dp"
            />

    </LinearLayout>

</RelativeLayout>
