<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.actK.LogInAct_OSK">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/loginbg"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/edPhoneNum"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp"
            android:hint="@string/sPhoneNumber"
            android:singleLine="true"
            android:maxLength="20"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="6dp"
            android:gravity="bottom"
            android:inputType="phone"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#FFFFFF"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/edPassword"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp"
            android:hint="@string/sPassword"
            android:singleLine="true"
            android:maxLength="50"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="6dp"
            android:gravity="bottom"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#FFFFFF"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sForgotPassword"
            android:id="@+id/txtForgot"
            android:layout_gravity="right"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            />

        <TextView
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:text="@string/sLogin"
            android:id="@+id/txtLogoutBtn"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:gravity="center"
            android:background="@drawable/sendbtn"
            android:layout_marginTop="36dp"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/linearLayout"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sDontHaveAC"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                />
            <TextView
                android:id="@+id/txtSignUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sSignup"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="4dp"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selse"
                android:id="@+id/textView2"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:background="#FFFFFF"
                android:layout_toLeftOf="@+id/textView2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="16dp"
                ></RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:background="#FFFFFF"
                android:layout_toRightOf="@+id/textView2"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="10dp"
                ></RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:weightSum="1"
            >
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgFB"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/loginfacebookbtn"
                    android:layout_marginRight="6dp"
                    />
                <com.facebook.login.widget.LoginButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="6dp"
                    android:visibility="gone"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgG"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/logingooglebtn"
                    android:layout_marginLeft="6dp"
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
