<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@color/clrBackBlue"
        android:scaleType="centerCrop"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAppBlue"
        android:id="@+id/relTop">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:id="@+id/imgHomeBtn"
            android:layout_centerVertical="true"
            android:src="@drawable/menuicon"
            android:padding="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imgHomeBtn"
            android:text="@string/sSETTINGS"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relTop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:text="@string/sWhistle"
                android:textSize="17sp"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:padding="2dp"
                android:layout_marginLeft="16dp"
                />
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchWhistle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:checked="false" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/textboxseptr"
            android:visibility="gone"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:text="@string/sNotification"
                android:textSize="17sp"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:padding="2dp"
                android:layout_marginLeft="16dp"
                />
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchNoti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:checked="false" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/textboxseptr"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:text="@string/sRadius"
                android:textSize="17sp"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:padding="2dp"
                android:layout_marginLeft="16dp"
                />

            <RelativeLayout
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:id="@+id/relativeLayout" />
            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:layout_toRightOf="@+id/relativeLayout"
                android:max="9"
                android:indeterminate="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtRadius"
                android:textColor="#FFFFFF"
                android:text="1 km"
                android:textSize="12sp"

                android:layout_alignLeft="@+id/seekBar"
                android:layout_alignRight="@+id/seekBar"
                android:gravity="center"
                android:layout_marginBottom="2dp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/textboxseptr"
            />

    </LinearLayout>


</RelativeLayout>
